# tracktion

./: .env.example  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .spellcheck.yml  .wordlist.txt  CHANGELOG.md  CLAUDE.md  DEV_AGENT_TRAINING_REQUIREMENTS.md  LICENSE  QUALITY_ASSURANCE_CHECKLIST.md  README.md  REDIS_CACHE_IMPLEMENTATION_SUMMARY.md  THREAD_SAFETY_IMPROVEMENTS.md  alembic.ini  coverage_cataloging.txt  docker-compose.yaml  mkdocs.yml  pyproject.toml  test_health_report.md  test_results.txt  unit_test_results.txt
research/audio_analysis/: README.md  __init__.py  pyproject.toml
research/audio_analysis/benchmarks/: benchmark_features.csv  benchmark_loading.csv  benchmark_suite.py
research/audio_analysis/bpm_detection/: bpm_comparison_results.csv  compare_bpm.py  temporal_analysis.py  test_bpm_accuracy.py
research/audio_analysis/key_detection/: compare_keys.py  key_comparison_results.csv
research/audio_analysis/mood_genre/: essentia_models.py  model_evaluation.py  model_performance.csv
research/audio_analysis/reports/: decision_matrix.md  technical_report.md
research/audio_analysis/sample_data/: README.md  ground_truth.csv
services/analysis_service/: API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml
services/analysis_service/docs/: wave_orchestrator.md
services/analysis_service/src/: __init__.py  __main__.py  analysis_query.py  api_message_publisher.py  async_audio_analysis.py  async_audio_processor.py  async_config.py  async_cpu_optimizer.py  async_error_handler.py  async_message_consumer.py  async_message_integration.py  async_progress_tracker.py  async_resource_manager.py  async_storage_handler.py  audio_cache.py  batch_processor.py  bpm_detector.py  circuit_breaker.py  config.py  exceptions.py  graceful_shutdown.py  health_check.py  key_detector.py  lifecycle_consumer.py  main.py  message_consumer.py  message_publisher.py  metadata_extractor.py  metrics.py  metrics_collector.py  model_manager.py  mood_analyzer.py  performance.py  priority_queue.py  progress_tracker.py  repositories.py  storage_handler.py  structured_logging.py  temporal_analyzer.py  wave_orchestrator.py
services/analysis_service/src/api/: __init__.py  app.py  error_handlers.py  errors.py  middleware.py  rate_limiter.py  timeout.py  websocket.py
services/analysis_service/src/cue_handler/: __init__.py  audio_analyzer.py  backup.py  compatibility.py  converter.py  editor.py  exceptions.py  format_mappings.py  formats.py  generator.py  models.py  parser.py  validation_rules.py  validator.py
services/analysis_service/src/file_rename_executor/: __init__.py  executor.py  metadata_preserver.py  transaction_manager.py
services/analysis_service/src/file_rename_proposal/: README.md  __init__.py  batch_processor.py  confidence_scorer.py  config.py  conflict_detector.py  integration.py  message_interface.py  pattern_manager.py  proposal_generator.py  service.py  validator.py
services/cataloging_service/: Dockerfile  README.md  pyproject.toml
services/cataloging_service/migrations/: env.py  script.py.mako
services/cataloging_service/src/: __init__.py  async_catalog_service.py  config.py  database.py  main.py  message_consumer.py
services/cataloging_service/src/api/: __init__.py  app.py  middleware.py  recordings.py  schemas.py
services/cataloging_service/src/consumers/: __init__.py  tracklist_consumer.py
services/cataloging_service/src/models/: __init__.py  base.py  metadata.py  recording.py  tracklist.py
services/cataloging_service/src/repositories/: __init__.py  base.py  metadata.py  recording.py  tracklist.py
services/cataloging_service/src/utils/: __init__.py  logging.py
services/file_rename_service/: API_IMPLEMENTATION_SUMMARY.md  Dockerfile  README.md  __init__.py  pyproject.toml
services/file_rename_service/alembic/: env.py
services/file_rename_service/alembic/versions/: 001_initial_migration.py
services/file_rename_service/api/: __init__.py  auth.py  feedback_routes.py  ml_routers.py  rename_routes.py  routers.py  schemas.py
services/file_rename_service/app/: __init__.py  config.py  main.py
services/file_rename_service/app/cache/: __init__.py  simple_cache.py
services/file_rename_service/app/feedback/: __init__.py  experiments.py  learning.py  metrics.py  models.py  processor.py  storage.py
services/file_rename_service/app/ml/: __init__.py  features.py  models.py  predictor.py  trainer.py  versioning.py
services/file_rename_service/app/proposal/: __init__.py  batch_processor.py  cache.py  conflicts.py  explainer.py  generator.py  models.py  scorer.py  templates.py
services/file_rename_service/examples/: batch_processor_usage.py
services/file_rename_service/models/: __init__.py  database.py
services/file_rename_service/utils/: __init__.py  rabbitmq.py  service_registry.py
services/file_watcher/: Dockerfile  README.md  pyproject.toml
services/file_watcher/src/: __init__.py  async_file_watcher.py  async_message_publisher.py  async_metadata_extractor.py  benchmark_hashing.py  file_scanner.py  hash_utils.py  main.py  message_publisher.py  stress_test_multi_instance.py  watchdog_handler.py
services/notification_service/: README.md  __init__.py  pyproject.toml
services/notification_service/src/: __init__.py
services/tracklist_service/: API_DOCUMENTATION.md  README.md  TEST_REPORT.md  alembic.ini  pyproject.toml
services/tracklist_service/alembic/: env.py
services/tracklist_service/examples/: client.py  search_response.json  tracklist_response.json
services/tracklist_service/src/: __init__.py  config.py  exceptions.py  main.py  resilience.py
shared/: pyproject.toml
shared/core_types/: pyproject.toml
shared/core_types/src/: __init__.py  async_compatibility.py  async_database.py  async_repositories.py  database.py  models.py  neo4j_repository.py  rename_proposal_repository.py  repositories.py
shared/utils/: __init__.py  async_http_client.py  async_monitoring.py  async_timeout_handler.py  connection_pool_manager.py
shared/utils/resilience/: __init__.py  circuit_breaker.py  config.py  exceptions.py
(+645 files in other folders)
