[project]
name = "tracktion"
version = "0.1.0"
description = "Automated music library management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "structlog>=24.7.0",
    "python-dotenv>=1.0.1",
    "psutil>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"docs/prototypes/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["tracktion"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.prototypes.*"
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["tracktion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=services --cov=shared --cov-report=term-missing"
asyncio_mode = "auto"
