[project]
name = "audio-analysis-research"
version = "0.1.0"
description = "Research spike for audio analysis libraries and techniques"
requires-python = ">=3.10,<3.14"
dependencies = [
    "essentia",  # Use latest available version
    "librosa>=0.10.1",
    # "madmom>=0.16.1",  # Build issues on macOS with Python 3.12+
    # "aubio>=0.4.9",  # Build issues on macOS with Python 3.12+
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "tensorflow>=2.15.0",  # Required for Essentia models
    "mutagen>=1.47.0",  # For reading audio metadata
    "tqdm>=4.66.0",  # For progress bars
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # This is a research project, not a package to distribute

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
