[project]
name = "analysis_service"
version = "0.1.0"
description = "Audio metadata extraction and analysis service"
requires-python = ">=3.13"
dependencies = [
    "mutagen>=1.47.0",
    "pika>=1.3.0",
    "aio-pika>=9.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    "flask>=3.0.0",
    "neo4j>=5.28.2",
    "essentia>=2.1b6.dev1389",
    "essentia-tensorflow>=2.1b6.dev1389",
    "numpy>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
