[project]
name = "file-watcher"
version = "0.1.0"
description = "File monitoring service for tracktion"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=6.0.0",
    "pika>=1.3.2",
    "aio-pika>=9.0.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.4",
    "structlog>=24.5.0",
    "xxhash>=3.5.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP"]
ignore = ["E501", "C901"]
