[project]
name = "notification-service"
version = "1.0.0"
description = "Unified Discord notification service for Tracktion"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
