[project]
name = "notification-service"
version = "1.0.0"
description = "Unified Discord notification service for Tracktion"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
# SQLAlchemy 2.0 compatibility - disable problematic error codes
disable_error_code = ["attr-defined", "arg-type", "assignment", "misc", "return-value", "type-var", "operator", "unused-ignore", "import-untyped", "no-any-return"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
